[package]
name = "ridiculous-die-roller"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "*"
dotenv = "*"
dotenv_codegen = "*"
env_logger = "*"
log = "*"
mio = { version = "0.8", features = ["net", "os-poll"] }
rand = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.59"
